<resources>
    <string name="app_name">Recipe-Research</string>
    <string name="api_Key">7b67fbe620a34e3caed32b77c06a88c8</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="calories"><b>Calories: </b></string>
    <string name="carbs">Carbs: </string>
    <string name="fat">Fat: </string>
    <string name="protein">Protein: </string>
    <string name="meal_found_mail">Check out this cool meal I found! \n </string>
    <string name="share_via">Share via</string>
    <string name="id">id</string>
    <string name="database">Database</string>
    <string name="recipe_filter">Recipe-Filter</string>
    <string name="two_persons">2 Personen</string>
    <string name="loading..">Loading… </string>
    <string name="search_food">Search your food…</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="recipe_source">Source</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_nutritions">Nutritions</string>
    <string name="recipe_summary">Summary</string>
    <string name="bookmark">Add to Database</string>
    <string name="meal_view">View of Sorted Meals</string>
    <string name="db_timestamp">Database Timestamp:</string>
    <string name="refresh_button">Showing a Button to Refresh New Meals</string>
    <string name="bookmark_msg">Do you really want to delete this bookmark?</string>
    <string name="bookmark_msg_all">Do you really want to delete all bookmarks?</string>
    <string name="builder_title">Warning!!!</string>
    <string name="del_all_entries">Delete all database entries</string>
    <string name="txt_view">Textview</string>
    <string name="dp">: </string>
    <string name="start">Search Recipes</string>
    <string name="you_have">You have  </string>
    <string name="bookmarks"> total bookmarks"</string>
    <string name="nothing_selected">Nothing Selected!</string>
    <string name="speakableTextRefresh">Refresh Button</string>
    <string name="speakableTextPersonPicture">Persons</string>
    <string name="speakableTextTimePicture">Time</string>
    <string name="spinnerInnerPlaceHolder">Dessert</string>
    <string name="spinnerPlaceHolder">Menu</string>
    <string name="all_bookmarks_del">All bookmarks deleted</string>
    <string name="dairyFree">Dairy free</string>
    <string name="glutenFree">Gluten free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="servings">Servings</string>
    <string name="minutes">Minutes</string>
    <string name="vegetarian_filter">Vegetarian</string>
    <string name="vegan_filter">Vegan</string>
    <string name="dairy_free_filter">Dairy free</string>
    <string name="gluten_free_filter">Gluten free</string>
    <string name="cross">❌</string>
    <string name="check">✅</string>
    <string name="clearFilter">Clear Filter</string>
    <string name="filteredBy">Filtered by: </string>
    <string name="filterCleared">Filter cleared</string>



    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>


</resources>