<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_cream_brown"
    tools:context=".DatabaseActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/databaseCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_view"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dairyFree"
            android:textSize="10dp"
            android:id="@+id/dairyFilter"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glutenFree"
            android:textSize="10dp"
            android:id="@+id/glutenFilter"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegan"
            android:textSize="10dp"
            android:id="@+id/veganFilter"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian"
            android:textSize="10dp"
            android:id="@+id/vegetarianFilter"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            />


    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.5" />


    <Button
        android:id="@+id/deleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/dark_cream_brown"
        android:text="@string/del_all_entries"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:ignore="VisualLintButtonSize" />


</androidx.appcompat.widget.LinearLayoutCompat>