<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_cream_brown"
    tools:context=".RecipeDetailsActivity">



    <androidx.appcompat.widget.Toolbar
        app:title="@string/recipe_details"
        app:titleTextColor="@color/dark_cream_brown"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/imageView_db_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/share_via"
            android:src="@drawable/ic_share"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView_db_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/bookmark"
            android:src="@drawable/ic_bookmark_border"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />


    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_db_meal_name"
                android:text="@string/recipe_name"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/dark_cream_brown"
                android:shadowColor="@color/text_shadow_white"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="1"
                android:padding="8dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_db_meal_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="1"
                android:text="@string/recipe_source"
                android:textColor="@color/grey_font"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView_db_meal_name"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:background="@drawable/shadow_layer"
                android:contentDescription="@string/meal_view"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView_db_meal_summary"
                android:text="@string/recipe_summary"
                android:textSize="14sp"
                android:textColor="@color/dark_cream_brown"
                android:textStyle="normal"
                android:background="@drawable/shadow_layer"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/recipe_nutritions"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_cream_brown"
                android:shadowColor="@color/text_shadow_white"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="1"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_db_meal_nutrition"
                android:text="@string/recipe_nutritions"
                android:textSize="14sp"
                android:textColor="@color/dark_cream_brown"
                android:textStyle="normal"
                android:background="@drawable/shadow_layer"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/recipe_ingredients"
                android:textStyle="bold"
                android:textColor="@color/dark_cream_brown"
                android:textSize="18sp"
                android:shadowColor="@color/text_shadow_white"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="1"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_db_meal_ingredients"
                android:text="@string/recipe_ingredients"
                android:textSize="14sp"
                android:textColor="@color/dark_cream_brown"
                android:textStyle="normal"
                android:background="@drawable/shadow_layer"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textView_db_meal_createTime"
                android:textSize="14sp"
                android:textColor="@color/dark_cream_brown"
                android:textStyle="normal"
                android:background="@drawable/shadow_layer"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>