<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_cream_brown"
    tools:context="com.example.recipe_research.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.5">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="40dp">


            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/recipe_filter"
                    android:backgroundTint="@color/dark_cream_brown"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center"

                    android:layout_marginStart="8dp"
                    android:onClick="showFilter"
                    tools:ignore="RelativeOverlap" />

                <Spinner
                    android:id="@+id/spinner_tags"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:entries="@array/tags"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/light_cream_brown"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchVieW_home"
                    app:queryHint="@string/search_food"
                    app:iconifiedByDefault="false"
                    app:searchIcon="@drawable/ic_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/refresh"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:contentDescription="@string/refresh_button"
                android:src="@drawable/ic_refresh" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/database"
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/dark_cream_brown"
            android:text="@string/database" />
    </LinearLayout>


</LinearLayout>
